--- a/index.html
+++ b/index.html
@@ -3,10 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <h1>My First Web Page</h1>
-    <h2>I am dong.</h2>
+<section class="top-banner">
+    <div class="half-width" >
+        <h1>Welcome To</h1>
+        <h1><span class="name-highlight">Peter Parker</span> World</h1>
+        <h3>Build Climber and Train Stopper</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia rerum doloribus fugit, iure nulla, ad ab pariatur fugiat iste voluptates iusto ut minus laborum tempore ipsam quos accusantium atque consequuntur!</p>
+        <a class="anchor-button"  href="https://www.google.com" target="_blank" >HIRE ME</a>
+    </div>
+    <div class="half-width">
+        <img src="images/jhankar.png" alt="">
+    </div>
+</section>
+<section>
+    <div class="half-width">
+        <img src="images/jhankar2.png" alt="">
+    </div>
+    <div class="half-width">
+        <h2 style="font-weight:10000;"> Dream Big </h2>
+        <h3>Become A Developer</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia rerum doloribus fugit, iure nulla, ad ab pariatur fugiat iste voluptates iusto ut minus laborum tempore ipsam quos accusantium atque consequuntur!</p>
+        <a class="anchor-button"  href="https://www.google.com" target="_blank" >DOWNLOAD RESUME</a>
+    </div>
+</section>    
 </body>
 </html>
